--- a/Views/Principal.html
+++ b/Views/Principal.html
@@ -8,7 +8,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Starter</title>
+  <title>APPSolidos | ADMIN</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="../Public/bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -65,7 +65,7 @@ desired effect
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Admin</b>LTE</span>
+      <span class="logo-lg"><b>APP</b>RSOLIDOS</span>
     </a>
 
     <!-- Header Navbar -->
@@ -239,7 +239,7 @@ desired effect
         </div>
         
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p>Carlin Acosta</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
@@ -255,10 +255,53 @@ desired effect
             </span>
         </div>
       </form>
+
       <!-- /.search form -->
 
       <!-- Sidebar Menu -->
-      <?php require_once 'layout/Privilegios.php'; ?>
+     <!-- Sidebar Menu -->
+      <ul class="sidebar-menu" data-widget="tree">
+        <li class="treeview">
+          <a href="#"><i class="fa fa-link"></i> <span>MANTENIMIENTO</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/Conductor">Conductor</a></li>
+            <li><a href="#">Personal</a></li>
+            <li><a href="#">Camión Recolector</a></li>
+          </ul>
+        </li>
+
+         <li class="treeview">
+          <a href="#"><i class="fa fa-link"></i> <span>PROCESOS</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/usuarios">Monitoreo</a></li>
+            <li><a href="#">Detalle Reporte</a></li>
+            <li><a href="#">Detalle Camion</a></li>
+          </ul>
+        </li>
+
+         <li class="treeview">
+          <a href="#"><i class="fa fa-link"></i> <span>REPORTES</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+          </a>
+          <ul class="treeview-menu">
+            
+            <li><a href="#">Recoleccion Por Camion</a></li>
+            <li><a href="#">Recolección Por Mes</a></li>
+            <li><a href="#">Recoleccion Anual</a></li>
+            
+          </ul>
+        </li>
+      </ul>
       <!-- /.sidebar-menu -->
     </section>
     <!-- /.sidebar -->
