--- a/Views/index.html
+++ b/Views/index.html
@@ -36,13 +36,13 @@
   <div class="login-box-body">
     <p class="login-box-msg">Sign in to start your session</p>
 
-    <form action="control.php" method="post">
+    <form  action="JavaScript:login()" method="post" name="frm_login">
       <div class="form-group has-feedback">
-        <input type="text" class="form-control" name="login" placeholder="usuario">
+        <input type="text" class="form-control" name="txtUsuario" id="txtUsuario" placeholder="usuario">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña">
+        <input type="password" class="form-control" name="txtContrasenia" id="txtContrasenia" placeholder="Contraseña">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
@@ -79,6 +79,7 @@
 <script src="../Public/bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
 <script src="../Public/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../Public/js/myjava.js"></script>
 <!-- iCheck -->
 <script src="../Public/plugins/iCheck/icheck.min.js"></script>
 <script>
