--- a/Views/page/Conductor.html
+++ b/Views/page/Conductor.html
@@ -270,7 +270,7 @@ desired effect
           <ul class="treeview-menu">
             <li><a href="Conductor">Conductor</a></li>
             <li><a href="Personal">Personal</a></li>
-            <li><a href="CamionRecolector">Camión Recolector</a></li>
+            <li><a href="#">Camión Recolector</a></li>
           </ul>
         </li>
 
@@ -341,7 +341,7 @@ desired effect
                                 <div id="DatosUsuario">
                                     
                                 </div> 
-                                
+                                <h1>Vista de COnductor</h1>
                                 
                                 
                             </div>
