--- a/Views/page/Personal.html
+++ b/Views/page/Personal.html
@@ -268,9 +268,9 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="Conductor">Conductor</a></li>
-            <li><a href="Personal">Personal</a></li>
-            <li><a href="CamionRecolector">Camión Recolector</a></li>
+            <li><a href="/Conductor">Conductor</a></li>
+            <li><a href="/Personal">Personal</a></li>
+            <li><a href="#">Camión Recolector</a></li>
           </ul>
         </li>
 
@@ -341,7 +341,7 @@ desired effect
                                 <div id="DatosUsuario">
                                     
                                 </div> 
-                                
+                                <h1>Vista de Ciudadano</h1>
                                 
                                 
                             </div>
