--- a/Views/Conductor.html
+++ b/Views/Conductor.html
@@ -268,7 +268,7 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/usuarios">Conductor</a></li>
+            <li><a href="/page/Conductor">Conductor</a></li>
             <li><a href="#">Personal</a></li>
             <li><a href="#">Camión Recolector</a></li>
           </ul>
@@ -281,7 +281,7 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Conductor">Monitoreo</a></li>
+            <li><a href="#">Monitoreo</a></li>
             <li><a href="#">Detalle Reporte</a></li>
             <li><a href="#">Detalle Camion</a></li>
           </ul>
@@ -341,7 +341,7 @@ desired effect
                                 <div id="DatosUsuario">
                                     
                                 </div> 
-                                
+                                <h1>Vista de COnductor</h1>
                                 
                                 
                             </div>
